2016-07-17         Arnold D. Robbins     <arnold@skeeve.com>

	* eval.c (set_LINT): Reset lintfunc to `warning' for LINT="invalid".
	Thanks to Andy Schorr for the report.

2016-07-08         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2016-07-01         Arnold D. Robbins     <arnold@skeeve.com>

	* array.c (value_info): Print something reasonable when stfmt
	is -1.
	* mpfr.c (mpg_format_val): Don't cast index to char.
	* node.c (r_format_val): Ditto.
	Thanks to Andrew Schorr for pointing these out.

	Unrelated:

	* gawkapi.c (api_warning): Fix the comment header.
	(api_lintwarn): Factor out the call to va_end to after the if.

	Unrelated:

	* symbol.c (get_symbols): Add FUNCTAB and SYMTAB to the list
	for the -d option.
	* awkgram.y (dump_vars): Allow "-" to mean print to stdout.
	Thanks to Hermann Peifer for the reports.

2016-06-26         Arnold D. Robbins     <arnold@skeeve.com>

	Repair change of 2015-08-25 to handling of MAYBE_NUM.
	* mpfr.c (mpg_force_number): Just clear MAYBE_NUM.
	* node.c (r_force_number): Clear STRING separately after
	setting NUMBER.

	Thanks to Andrew Schorr for reporting the problem.
	A test case will eventually be merged into master.

2016-06-16         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h: Add comment headers for several functions.
	* builtin.c (nondec2awknum): Actually set a '\0' before
	calling to strtod() so that the save and restore do something.

2016-06-15         Arnold D. Robbins     <arnold@skeeve.com>

	* config.sub: Update from GNULIB.

2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_sub): Fix sub for long runs of backslashes.
	Thanks to Mike Brennan for the report.

2016-06-10         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Get latest from Gnulib master.
	* main.c (UPDATE_YEAR): Bump to 2016.

2016-06-09         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

	Unrelated:
