@@ -38,6 +38,14 @@ Changes from 4.1.3 to 4.1.4
 
 11. The -d option now allows -d- to print to standard output.
 
+12. Error messages for --help and in other instances should now get
+    translated correctly.
+
+13. A new environment variable GAWK_LOCALE_DIR may be set to locate the .mo
+    file for gawk itself.
+
+14. A number of bugs have been fixed. See the ChangeLog.
+
 Changes from 4.1.2 to 4.1.3
 ---------------------------
 
