@@ -1,3 +1,8 @@
+2016-07-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Document GAWK_LOCALE_DIR env var and also to not
+	use LANGUAGE env var.
+
 2016-07-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (Auto-set): Add example use of multiply function.
